--- a/tp5/composer.json
+++ b/tp5/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "php": ">=5.4.0",
         "topthink/framework": "~5.0.0",
-        "topthink/think-worker": "^1.0"
+        "topthink/think-worker": "^1.0",
+        "workerman/workerman-for-win": "^3.5"
     },
     "autoload": {
         "psr-4": {
