--- a/tp5/composer.json
+++ b/tp5/composer.json
@@ -19,7 +19,9 @@
         "php": ">=5.4.0",
         "topthink/framework": "~5.0.0",
         "topthink/think-worker": "^1.0",
-        "workerman/workerman-for-win": "^3.5"
+        "workerman/workerman-for-win": "^3.5",
+        "lcobucci/jwt": "^3.2",
+        "80h4ck/tp5-auth": "^1.0"
     },
     "autoload": {
         "psr-4": {
